# sandi

./: .gitignore  PROJECT_STATUS.md  index.html  package-lock.json  package.json
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json  test_lofty.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  db.rs  lib.rs  main.rs  metadata.rs  midi.rs  scanner.rs  shortcut_manager.rs  shortcuts.rs
